# chimera

./: .coderabbit.yaml  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: agent.mdc
.github/workflows/: main.yml
reports/: day1_submission.md
research/: README.md  analysis.md  architecture_strategy.md  open_questions.md  research_summary.md  tooling_strategy.md
skills/: README.md
skills/skill_fetch_trends/: README.md
skills/skill_generate_post_bundle/: README.md
skills/skill_publish_content/: README.md
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
src/chimera/: __init__.py
tests/: __init__.py  conftest.py  test_architectural_invariants.py  test_data_contracts.py
tests/skills/: __init__.py  test_skill_fetch_trends.py  test_skill_generate_post_bundle.py  test_skill_publish_content.py
