[project]
name = "chimera"
version = "0.1.0"
description = "Autonomous Influencer Network - Agentic Infrastructure for creating, governing, and scaling AI-powered digital entities"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Gutema Fite", email = "gutfite@gmail.com" }
]
keywords = [
    "ai-agents",
    "autonomous-systems",
    "mcp",
    "swarm-architecture",
    "influencer-network"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    
    # Async & HTTP
    "httpx>=0.27",
    "aiohttp>=3.9",
    
    # Database & Caching
    "redis>=5.0",
    "weaviate-client>=4.0",
    "asyncpg>=0.29",
    
    # AI & LLM
    "openai>=1.0",
    "anthropic>=0.30",
    
    # MCP (Model Context Protocol)
    "mcp>=1.0",
    
    # Utilities
    "python-dotenv>=1.0",
    "structlog>=24.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.15.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

commerce = [
    # Coinbase AgentKit for Agentic Commerce
    "coinbase-agentkit>=0.1",
    "web3>=6.0",
]

[project.urls]
Homepage = "https://github.com/gufite/chimera"
Documentation = "https://github.com/gufite/chimera#readme"
Repository = "https://github.com/gufite/chimera.git"
Issues = "https://github.com/gufite/chimera/issues"

[project.scripts]
chimera = "chimera.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chimera"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.coverage.run]
source = ["src/chimera"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
